NINE-836 fixed support email

--- a/locales/de.json
+++ b/locales/de.json
@@ -1172,7 +1172,7 @@
         "text1": "Um dich beim verantwortungsbewussten Spiel zu unterstützen, bieten wir das Feature Persönliche Limits. Du kannst Limits für den Einzahlungsbetrag, Verluste, Wetten, Ausgaben in einem Spiel, oder auf deine gesamte Kontenaktivität einrichten. Auf diese Funktionalität kann im Abschnitt Persönliche Limits deines Kontos zugegriffen werden         {toLimits} {buttonLog}",
         "here": "hier",
         "text2": [
-          "Limits können jederzeit geändert werden. Senkungen eines Limits treten sofort in Effekt; eine Erhöhung wird jedoch erst nach Bestätigung durch E-Mail und erst nach Ablauf des vorherigen Limits des gleichen Typs aktiv, um vorschnelle Entscheidungen zu vermeiden. Falls du mehr Informationen oder Unterstützung mit den Persönlichen Limits benötigst, kontaktiere bitte unsere Kundenbetreuung unter contact@ninecasino.com.",
+          "Limits können jederzeit geändert werden. Senkungen eines Limits treten sofort in Effekt; eine Erhöhung wird jedoch erst nach Bestätigung durch E-Mail und erst nach Ablauf des vorherigen Limits des gleichen Typs aktiv, um vorschnelle Entscheidungen zu vermeiden. Falls du mehr Informationen oder Unterstützung mit den Persönlichen Limits benötigst, kontaktiere bitte unsere Kundenbetreuung unter support@ninecasino.com.",
           "Einzahlungslimit. Ein Limit auf deine Einzahlungen für einen Tag, eine Woche oder einen Monat.",
           "Verlustlimit. Ein Limit auf deine Verluste im Casino für einen Tag, eine Woche oder einen Monat. Bitte berücksichtige, dass Verluste auf der anfänglichen Einzahlung basieren und nicht auf Gewinnen, die aus dem eingezahlten Betrag resultieren. Wenn du zum Beispiel €50 einzahlst, ein Verlustlimit von €10 einrichtest und dann €1.000 gewinnst, kannst du immer noch mehr als €10 des Kontostands von €1.000 verlieren, weil das Limit auf der anfänglichen Einzahlung basiert statt auf den Gewinnen.",
           "Wettlimit. Ein Limit auf den Wetteinsatz für einen Tag, eine Woche oder einen Monat.",
@@ -1189,7 +1189,7 @@
       "section4": {
         "title": "WAS BEDEUTET SELBSTSPERRUNG?",
         "text": [
-          "Das Festlegen einer Selbstsperrung veranlasst uns zur Ergreifung aller Maßnahmen, um dir den Zugang zu deinem Konto zu verwehren und sicherzustellen, dass du kein Werbematerial erhältst. Darüber hinaus kannst du dich unter contact@ninecasino.com an unsere Kundenbetreuung wenden und uns wissen lassen, dass du dich entschieden hast, das Spielen auf der Webseite für einen bestimmten Zeitraum oder dauerhaft einzustellen.",
+          "Das Festlegen einer Selbstsperrung veranlasst uns zur Ergreifung aller Maßnahmen, um dir den Zugang zu deinem Konto zu verwehren und sicherzustellen, dass du kein Werbematerial erhältst. Darüber hinaus kannst du dich unter support@ninecasino.com an unsere Kundenbetreuung wenden und uns wissen lassen, dass du dich entschieden hast, das Spielen auf der Webseite für einen bestimmten Zeitraum oder dauerhaft einzustellen.",
           "Beachte bitte, dass die auf deinem Konto verbliebenen Mittel im Falle einer unbefristeten Selbstsperrung in den von dem Casino festgelegten Grenzen ausbezahlt werden. Bei einer befristeten Selbstsperrung werden die auf dem Konto verbliebenen Mittel erst bei Ablauf der Sperrfrist in den von dem Casino festgelegten Grenzen ausgezahlt."
         ]
       },
