--- a/locales/el.json
+++ b/locales/el.json
@@ -1155,7 +1155,7 @@
         "text1" : "Για να σας βοηθήσουμε στον τζόγο υπεύθυνα, προσφέρουμε τη λειτουργία «Προσωπικά όρια». Μπορείτε να ορίσετε όρια στο ποσό που καταθέτετε, χάνετε, ποντάρετε, ξοδεύετε σε ένα παιχνίδι ή στο σύνολο του λογαριασμού σας. Αυτή η λειτουργία είναι προσβάσιμη στο λογαριασμό σας στην ενότητα «Προσωπικά όρια» εδώ.",
         "here" : "εδώ",
         "text2" : [
-          "Τα όρια μπορούν να τροποποιηθούν ανά πάσα στιγμή. Η μείωση του ορίου θα αρχίσει να ισχύει αμέσως, ωστόσο η αύξηση μπορεί να συμβεί μόνο μετά την επιβεβαίωση μέσω ηλεκτρονικού ταχυδρομείου και μόνο μετά τη λήξη του προηγούμενου ορίου του ίδιου τύπου, προκειμένου να αποφευχθούν οι βιαστικές αποφάσεις. Εάν χρειάζεστε περισσότερες πληροφορίες ή βοήθεια σχετικά με τα «Προσωπικά όρια», επικοινωνήστε με την ομάδα υποστήριξης στη διεύθυνση contact@ninecasino.com.",
+          "Τα όρια μπορούν να τροποποιηθούν ανά πάσα στιγμή. Η μείωση του ορίου θα αρχίσει να ισχύει αμέσως, ωστόσο η αύξηση μπορεί να συμβεί μόνο μετά την επιβεβαίωση μέσω ηλεκτρονικού ταχυδρομείου και μόνο μετά τη λήξη του προηγούμενου ορίου του ίδιου τύπου, προκειμένου να αποφευχθούν οι βιαστικές αποφάσεις. Εάν χρειάζεστε περισσότερες πληροφορίες ή βοήθεια σχετικά με τα «Προσωπικά όρια», επικοινωνήστε με την ομάδα υποστήριξης στη διεύθυνση support@ninecasino.com.",
           "Όριο κατάθεσης. Όριο στις καταθέσεις σας για μια ημέρα, μια εβδομάδα ή ένα μήνα.",
           "Όριο απώλειας. Όριο στις απώλειές σας στο καζίνο για μια ημέρα, μια εβδομάδα ή ένα μήνα. Λάβετε υπόψη ότι η απώλεια βασίζεται στην αρχική κατάθεση και όχι στα κέρδη που αποδίδονται στο ποσό που κατατέθηκε. Εάν, για παράδειγμα, καταθέσετε 50 €, θέσετε όριο ζημιών 10 € και μετά συνεχίσετε να κερδίζετε 1.000 €, μπορείτε ακόμα να χάσετε περισσότερα από 10 € από το υπόλοιπο των 1.000 € καθώς το όριο βασίζεται στην αρχική κατάθεση αντί για τα κέρδη.",
           "Όριο στοιχήματος. Όριο στο στοιχηματισμένο ποσό για μια ημέρα, μια εβδομάδα ή ένα μήνα.",
@@ -1172,7 +1172,7 @@
       "section4" : {
         "title" : "ΤΙ ΕΙΝΑΙ Ο ΑΥΤΟΑΠΟΚΛΕΙΣΜΟΣ;",
         "text" : [
-          "Η ρύθμιση του αυτοαποκλεισμού μας ενημερώνει ότι πρέπει να λάβουμε όλα τα μέτρα για να αποκλείσουμε την πρόσβασή σας στον λογαριασμό σας και να βεβαιωθούμε ότι δεν λαμβάνετε διαφημιστικό υλικό. Μπορείτε επίσης να επικοινωνήσετε με την ομάδα υποστήριξής μας στο contact@ninecasino.com και να μας ενημερώσετε για την απόφασή σας να σταματήσετε τα τυχερά παιχνίδια στον Ιστότοπο για ορισμένο χρονικό διάστημα ή για πάντα.",
+          "Η ρύθμιση του αυτοαποκλεισμού μας ενημερώνει ότι πρέπει να λάβουμε όλα τα μέτρα για να αποκλείσουμε την πρόσβασή σας στον λογαριασμό σας και να βεβαιωθούμε ότι δεν λαμβάνετε διαφημιστικό υλικό. Μπορείτε επίσης να επικοινωνήσετε με την ομάδα υποστήριξής μας στο support@ninecasino.com και να μας ενημερώσετε για την απόφασή σας να σταματήσετε τα τυχερά παιχνίδια στον Ιστότοπο για ορισμένο χρονικό διάστημα ή για πάντα.",
           "Λάβετε υπόψη ότι εάν αποκλειστείτε μόνοι σας από το καζίνο για αόριστο χρονικό διάστημα, τα υπόλοιπα που θα παραμείνουν στο υπόλοιπο θα πληρωθούν σύμφωνα με τα όρια του καζίνο. Εάν αποκλειστείτε μόνοι σας για ορισμένο χρονικό διάστημα, τα χρήματα που παραμένουν στο υπόλοιπο θα πληρωθούν σύμφωνα με τα όρια του καζίνο μόνο όταν λήξει η περίοδος αυτοαποκλεισμού."
         ]
       },
